<resources>
    <string name="app_name">MIDApp</string>
    <string name="create_task">Create Task</string>
    <string name="task_name_label">Task Name:</string>
    <string name="temp_name">Name</string>
    <string name="task_priority_label">High Priority:</string>
    <string name="due_date_label">Due Date:</string>
    <string name="category_label">Task Category:</string>
    <string name="back">Go back</string>

    <string name="task_status_label">Task Status:</string>
    <string name="cancel_change_task_button">Cancel</string>
    <string name="change_task_button">Save Changes</string>
    <string name="delete_task_button">Delete Task</string>

    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="login_button">Log In</string>
    <string name="signup_button">Sign Up</string>
    <string name="filter">Filter</string>
    <string name="new_task">New Task</string>
    <string name="repeat_pw">Repeat Password</string>
    <string name="join_us">Join us today!</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="list_view">List View</string>
    <string name="manage_account">Manage Account</string>
    <string name="log_out">Log Out</string>

    <string name="not_started">Not Started</string>
    <string name="in_progress">In Progress</string>
    <string name="finished">Finished</string>
    <string name="save_changes">Save Changes</string>
    <string name="change_cred">Change your credentials</string>
    <string name="kanban_view">Kanban view</string>
    <string name="status">Status:</string>

    <string-array name="status_array">
        <item>Not Started</item>
        <item>In Progress</item>
        <item>Finished</item>
    </string-array>

    <string-array name="task_category_array">
        <item>Family</item>
        <item>Friends</item>
        <item>Hobbies</item>
        <item>Household chores</item>
        <item>Schoolwork</item>
        <item>Self Care</item>
        <item>Training and Competition</item>
        <item>Work</item>
    </string-array>
</resources>