<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/subscribe_button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-49dp"
        tools:layout_editor_absoluteY="-237dp">

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="76dp"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constrainedHeight="true"
            app:layout_constrainedWidth="true" />

        <EditText
            android:id="@+id/EmailField"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="75dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="75dp"
            android:ems="10"
            android:inputType="numberPassword"
            android:hint="@string/password" />

        <EditText
            android:id="@+id/Repeatpassword"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="75dp"
            android:ems="10"
            android:inputType="numberPassword"
            android:hint="@string/repeat_pw" />

        <Button
            android:id="@+id/Subscribe_button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="75dp"
            android:text="@string/save_changes" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="75dp"
            android:text="@string/change_cred"
            android:textAlignment="center" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>